Update the exercise numbering

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -1,6 +1,6 @@
-\begin{exer}
+\begin{customexer}{1.1}
   Show that equivalent definitions of manifolds are obtained if instead of allowing $U$ to be homeomorphic to \textit{any} open subset of $\mathbb{R}^n$, we require it to be homeomorphic to an open ball in $\mathbb{R}^n$, or to $\mathbb{R}^n$ itself.
-\end{exer}
+\end{customexer}
 
 \begin{proof}
   It is clear that a ``manifold" satisfying the open-ball or $\mathbb{R}^n$ definition satisfies the open-subset definition.
