--- a/chapter1.tex
+++ b/chapter1.tex
@@ -42,3 +42,13 @@
   Then $[x] = \pi(x) \in \pi(B(x', 1 / k)) \subset \pi(\pi^{-1}(U)) = U$.
   Therefore, $\mathcal{B}$ is a countable basis of $\RP^n$.
 \end{proof}
+
+\begin{customexer}{1.7}
+  Show that $\RP^n$ is compact.
+\end{customexer}
+
+\begin{proof}
+  $\pi(S^n) = \RP^n$ and $S^n$ is compact because it is a closed, bounded subset of $\mathbb{R}^{n + 1}$. (Heine-Borel)
+  Moreover, the image of a compact set under a continuous map is compact. (See A.45(a))
+  Thus $\RP^n$ is compact.
+\end{proof}
