--- a/chapter1.tex
+++ b/chapter1.tex
@@ -17,7 +17,7 @@
 
 
 \begin{customexer}{1.6}
-  Showt that $\RP^n$ is Hausdorff and second-countable, and is therefore a topological $n$-manifold.
+  Show that $\RP^n$ is Hausdorff and second-countable, and is therefore a topological $n$-manifold.
 \end{customexer}
 
 \begin{proof}
