--- a/chapter1.tex
+++ b/chapter1.tex
@@ -36,7 +36,7 @@
   Let $U \subset \RP^n$ be a nonempty open set.
   Let $[x] \in U$.
   Since $\pi$ is a quotient map, $\pi^{-1}(U)$ is open.
-  Moroever, $x \in \pi^{-1}(U)$.
+  Moreover, $x \in \pi^{-1}(U)$.
   Without loss of generality, $x \in S^{n}$.
   Then $x \in B(x', 1 / k) \subset \pi^{-1}(U)$ for some $B(x', 1 / k) \in \mathcal{B}$.
   Then $[x] = \pi(x) \in \pi(B(x', 1 / k)) \subset \pi(\pi^{-1}(U)) = U$.
@@ -91,7 +91,7 @@
 \end{proof}
 
 \begin{customexer}{1.18}
-  Let $M$ be a topologial manifold.
+  Let $M$ be a topological manifold.
   Two smooth atlases for $M$ determine the same smooth structure if and only if their union is a smooth atlas.
 \end{customexer}
 
@@ -102,9 +102,40 @@
   Then $\mathcal{A} \cup \mathcal{A}' \subset \mathcal{B}$, so $\mathcal{A} \cup \mathcal{A}'$ must be a smooth atlas.
   By Proposition 1.17(a), $\mathcal{A} \cup \mathcal{A}'$ determines a unique smooth structure, but it must be $\mathcal{B}$ because $\mathcal{B}$ contains the union.
 
-  On theo ther hand, suppose that thier union is a smooth atlas.
+  On the other hand, suppose that their union is a smooth atlas.
   Let $\mathcal{B}$ be the smooth structure that the union determines.
   Such $\mathcal{B}$ must exist by Proposition 1.17(a).
   By the same proposition, $\mathcal{A}, \mathcal{A}'$ must determine the unique smooth structures.
   However, they must be $\mathcal{B}$ because $\mathcal{B}$ contains both $\mathcal{A}$ and $\mathcal{A}'$.
+\end{proof}
+
+\begin{customexer}{1.20}
+  Every smooth manifold has a countable basis of regular coordinate balls.
+\end{customexer}
+
+\begin{proof}
+  First, we consider the special case in which $M$ can be covered by a single chart.
+  Suppose $\phi: M \rightarrow \hat{U} \subset \mathbb{R}^n$ is a global smooth coordinate map.
+  Let $\mathcal{B} = \{ B(x, r) \subset \hat{U} \mid x \in \mathbb{Q}^n, r \in \mathbb{Q}, \exists r' > r, B(x, r') \subset \hat{U} \}$. 
+  $\mathcal{B}' = \{ \phi^{-1}(B) \mid B \in \mathcal{B} \}$ is a countable basis of $M$ consisting of smooth coordinate balls.
+  For each $\phi^{-1}(B(x, r)) \in \mathcal{B}$, there exists $\phi^{-1}(B(x, r')) \in \mathcal{B}$ with $r' > r$.
+  The other properties of a regular coordinate ball are satisfied trivially because $\phi$ is a homeomorhpism.
+  Thus $M$ has a countable basis of regular coordinate balls.
+
+  Now let $M$ be an arbitrary $n$-manifold.
+  By definition, each point of $M$ is in the domain of a chart.
+  Because every open cover of a second-countable space has a countable subcover (Proposition A.16), $M$ is covered by countably many charts $\{ (U_i, \phi_i) \}$.
+  By the argument above, each $U_i$ has a countable basis of regular coordinate balls, and the union $\mathfrak{B}$ forms a countable basis of $M$ consisting of smooth coordinate balls.
+  Choose $\phi_i: U_i \rightarrow \hat{U}_i$ and $\phi_i^{-1}(B(x, r)) \in \mathfrak{B}$ arbitrarily.
+  Then there exists $r' > r$ such that $\phi_i^{-1}(B(x, r)) \subsetneq \phi_i^{-1}(B(x, r')) \in \mathfrak{B}$
+  Since $r' > r$, $\overline{B(x, r)} \subset B(x, r')$.
+  Because $\phi_i$ is a homeomorphism between $U_i$ and $\hat{U}_i$, $\phi^{-1}(\overline{B(x, r)})$ is the closure of $\phi_i^{-1}(B(x, r))$ in $U_i$.
+  Moreover, $\overline{B(x, r)}$ is compact, the closure of $\phi_i^{-1}(B(x, r))$ in $U_i$ is compact.
+  Since $M$ is Hausdorff, the closure of $\phi_i^{-1}(B(x, r))$ in $U_i$ is closed in $M$.
+  In other words, the closure of $\phi_i^{-1}(B(x, r))$ in $U_i$ is exactly the closure of $\phi_i^{-1}(B(x, r))$ in $M$.
+  Therefore, the closure of $\phi^{-1}(B(x, r))$ in $M$ is contained in $\phi^{-1}(B(x, r'))$, so we conclude that $\mathfrak{B}$ is a countable basis of regular coordinate balls.
+
+  \todo[inline,caption={}]{
+    This doesn't work because the center of a ball is 0.
+  }
 \end{proof}
