Explain why I'm skipping Ex 1.20

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -119,5 +119,6 @@
     I don't think I understand the definition of regular coordinate balls very well, and that makes it hard for me to solve this problem.
     In particular, does the $B'$ have to be in the same atlas?
     Why does the center of $\phi(B)$ have to be 0?
+    On top of that, I can't find much information on regular coordinate balls online, which makes me think that this is not a very useful concept.
   }
 \end{proof}
