--- a/introduction_to_smooth_manifolds_notes.tex
+++ b/introduction_to_smooth_manifolds_notes.tex
@@ -52,6 +52,7 @@
 \DeclareMathOperator{\Aut}{Aut}
 \DeclareMathOperator{\Gal}{Gal}
 \DeclareMathOperator{\RP}{\mathbb{R}\mathbb{P}}
+\DeclareMathOperator{\Int}{Int}
 
 \makeatletter
 \let\c@equation\c@thm
