--- a/chapter1.tex
+++ b/chapter1.tex
@@ -122,3 +122,29 @@
     On top of that, I can't find much information on regular coordinate balls online, which makes me think that this is not a very useful concept.
   }
 \end{proof}
+
+\begin{customexer}{1.39}
+  Let $M$ be a topological $n$-manifold with boundary.
+  \begin{enumerate}[label=(\alph*)]
+    \item
+      $\Int M$ is an open subset of $M$ and a topological $n$-manifold without boundary.
+    \item
+      $\partial M$ is a closed subset of $M$ and a topological $(n - 1)$-manifold without boundary.
+    \item
+      $M$ is a topological manifold if and only if $\partial M = \emptyset$.
+    \item
+      If $n = 0$, then $\partial M = \emptyset$ and $M$ is a 0-manifold.
+  \end{enumerate}
+\end{customexer}
+
+\begin{proof}
+  $ $
+  \begin{enumerate}[label=(\alph*)]
+    \item
+      Let $x \in \Int M$.
+      Let $(\phi, U)$ be an interior chart for $x$.
+      Then $x \in U \subset \Int M$ because every point in $U$ is in an interior chart $(\phi, U)$.
+      A subspace of $M$ must be Hausdorff and second-countable by Proposition A.17(g, i), so $\Int M$ is a second-countable, Hausdorff space in which every point has a neighborhood homeomorphic to an open subset in $\mathbb{R}^n$.
+      Thus $\Int M$ is an $n$-manifold without boundary.
+  \end{enumerate}
+\end{proof}
