--- a/chapter1.tex
+++ b/chapter1.tex
@@ -157,5 +157,8 @@
       If $\partial M$ is empty, then $M = \Int M$, so (a) implies that $M$ is an $n$-dimensional manifold.
       If $M$ is a topological manifold, every point is an interior point.
       Since a point cannot be both an interior point and a boundary point, $\partial M$ is empty.
+    \item
+      If $n = 0$, then $\partial \mathbb{H}^0 = \emptyset$.
+      Thus, the condition that $\phi(U) \cap \partial \mathbb{H}^n \ne \emptyset$ can never be satisfied, so there cannot be any boundary point.
   \end{enumerate}
 \end{proof}
