--- a/chapter1.tex
+++ b/chapter1.tex
@@ -152,7 +152,7 @@
       Let $(\phi, U)$ be a boundary chart of $x$.
       If a point $y \in U$ gets mapped into $\Int \mathbb{H}^n$, then it is certainly an interior point.
       Thus $\phi(U \cap \partial M) \subset \partial \mathbb{H}^n$.
-      Then $\pi_{n - 1} \circ \phi$ is a homeomorphism that maps $U \cap \partiail M$ into an open subset of $\mathbb{R}^{n - 1}$ where $\pi_{n - 1}: (x_1, \cdots, x_n) \mapsto (x_1, \cdots, x_{n - 1 })$.
+      Then $\pi_{n - 1} \circ \phi$ is a homeomorphism that maps $U \cap \partial M$ into an open subset of $\mathbb{R}^{n - 1}$ where $\pi_{n - 1}: (x_1, \cdots, x_n) \mapsto (x_1, \cdots, x_{n - 1 })$.
     \item
       If $\partial M$ is empty, then $M = \Int M$, so (a) implies that $M$ is an $n$-dimensional manifold.
       If $M$ is a topological manifold, every point is an interior point.
