--- a/introduction_to_smooth_manifolds_notes.tex
+++ b/introduction_to_smooth_manifolds_notes.tex
@@ -69,10 +69,10 @@
 \maketitle
 \tableofcontents
 
-\section{Chapter 1}
+\section{Chapter 1: Smooth Manifolds}
 \input{chapter1.tex}
 
-\section{Chapter 2}
+\section{Chapter 2: Smooth Maps}
 \input{chapter2.tex}
 
 \end{document}
