--- a/chapter2.tex
+++ b/chapter2.tex
@@ -28,3 +28,14 @@
       As shown above, $cf \in C^{\infty}(M)$.
   \end{itemize}
 \end{proof}
+
+\begin{customexer}{2.2}
+  Let $U$ be an open submanifold of $\mathbb{R}^n$ with its standard smooth manifold structure.
+  Show that a function $f: U \rightarrow \mathbb{R}^k$ is smooth in the sense just defined if and only if it is smooth in the sense of ordinary calculus.
+  Do the same for an open submanifold with boundary in $\mathbb{H}^n$.
+\end{customexer}
+
+\begin{proof}
+  $f$ is smooth in the sense just defined if and only if $f^{-1} \circ \Id^{-1}$ is smooth in the sense of ordinary calculus.
+  Since $f^{-1} \circ \Id^{-1} = f^{-1}$, $f^{-1} \circ \Id^{-1}$ is smooth in the sense of ordinary calculus if and only if $f^{-1}$ is smooth in the sense of ordinary calculus.
+\end{proof}
