--- a/introduction_to_smooth_manifolds_notes.tex
+++ b/introduction_to_smooth_manifolds_notes.tex
@@ -69,6 +69,9 @@
 \maketitle
 \tableofcontents
 
+\section{Dictionary}
+\input{dictionary.tex}
+
 \section{Chapter 1: Smooth Manifolds}
 \input{chapter1.tex}
 
