--- a/dictionary.tex
+++ b/dictionary.tex
@@ -25,3 +25,8 @@
   Let $M$ be a topological $n$-manifold and $(U, \phi), (V, \psi)$ be coordinate charts (\ref{topological_manifolds_coordinates}) such that $U \cap V \ne \emptyset$.
   $\psi \circ \phi^{-1}: \phi(U \cap V) \mapsto \psi(U \cap V)$ is called a transition map from $\phi$ to $\psi$.
 \end{defn}
+
+\begin{defn}[Smoothly Compatible]
+  Let $M$ be a topological $n$-manifold.
+  Two coordinate charts $(U, \phi), (V, \psi)$ are called smoothly compatible if $U \cap V = \emptyset$ or the transition map $\psi \circ \phi^{-1}$ is a diffeomorphism.
+\end{defn}
