--- a/dictionary.tex
+++ b/dictionary.tex
@@ -19,6 +19,11 @@
   \end{itemize}
 \end{defn}
 
+\begin{defn}[Atlas]
+  Let $M$ be a topological $n$-manifold.
+  An atlas for $M$ is a collection of charts $(U_{\alpha}, \phi_{\alpha})$ such that $M = \bigcup_{\alpha} U_{\alpha}$.
+\end{defn}
+
 \subsection{Smooth Manifolds}
 
 \begin{defn}[Transition Map]
