--- a/dictionary.tex
+++ b/dictionary.tex
@@ -35,3 +35,8 @@
   Let $M$ be a topological $n$-manifold.
   Two coordinate charts $(U, \phi), (V, \psi)$ are called smoothly compatible if $U \cap V = \emptyset$ or the transition map $\psi \circ \phi^{-1}$ is a diffeomorphism.
 \end{defn}
+
+\begin{defn}[Smooth Atlas]
+  Let $M$ be a topological $n$-manifold.
+  A smooth atlas is an atlas $\mathcal{A}$ such that any two charts in $\mathcal{A}$ are smoothly compatible with each other.
+\end{defn}
