--- a/dictionary.tex
+++ b/dictionary.tex
@@ -40,3 +40,7 @@
   Let $M$ be a topological $n$-manifold.
   A \textit{smooth atlas} is an atlas $\mathcal{A}$ such that any two charts in $\mathcal{A}$ are smoothly compatible with each other.
 \end{defn}
+
+\begin{defn}[Smooth Structure]
+  If $M$ is a topological $n$-manifold, an atlas $\mathcal{A}$ that is not properly contained in any larger smooth atlas is called \textit{maximal} or a \textit{smooth structure on $M$}
+\end{defn}
