--- a/dictionary.tex
+++ b/dictionary.tex
@@ -44,3 +44,7 @@
 \begin{defn}[Smooth Structure]
   If $M$ is a topological $n$-manifold, an atlas $\mathcal{A}$ that is not properly contained in any larger smooth atlas is called \textit{maximal} or a \textit{smooth structure on $M$}
 \end{defn}
+
+\begin{defn}[Smooth Manifold]
+  A \textit{smooth manifold} is a topological manifold equipped with a smooth structure.
+\end{defn}
