--- a/dictionary.tex
+++ b/dictionary.tex
@@ -11,11 +11,11 @@
     \item
       The pair $(U, \phi)$ is called a \texit{coordinate chart} or a \textit{chart}.
     \item
-      $U$ is called a \textit{coordinate domain} or a coordinate neighborhood.
+      $U$ is called a \textit{coordinate domain} or a \textit{coordinate neighborhood} and $\phi$ is called a \textit{coordinate map}.
     \item
       If $\phi(U)$ is an open ball in $\mathbb{R}^n$, $U$ is called a \textit{coordinate ball}.
     \item
-      If $\phi(U)$ is an open cube in $\mathbb{R}^n$, $U$ is called a \textit{coordinate cube} and $\phi$ is called a \textit{coordinate map}.
+      If $\phi(U)$ is an open cube in $\mathbb{R}^n$, $U$ is called a \textit{coordinate cube}.
   \end{itemize}
 \end{defn}
 
