--- a/chapter2.tex
+++ b/chapter2.tex
@@ -36,8 +36,8 @@
 \end{customexer}
 
 \begin{proof}
-  $f$ is smooth in the sense just defined if and only if $f^{-1} \circ \Id^{-1}$ is smooth in the sense of ordinary calculus.
-  Since $f^{-1} \circ \Id^{-1} = f^{-1}$, $f^{-1} \circ \Id^{-1}$ is smooth in the sense of ordinary calculus if and only if $f^{-1}$ is smooth in the sense of ordinary calculus.
+  $f$ is smooth in the sense just defined if and only if $f \circ \Id^{-1}$ is smooth in the sense of ordinary calculus.
+  Since $f \circ \Id^{-1} = f$, $f \circ \Id^{-1}$ is smooth in the sense of ordinary calculus if and only if $f$ is smooth in the sense of ordinary calculus.
 \end{proof}
 
 \begin{customexer}{2.3}\label{ex_2_3}
