--- a/dictionary.tex
+++ b/dictionary.tex
@@ -9,7 +9,7 @@
   Let $U$ be an open subset of $M$, $\hat{U}$ be an open subset of $\mathbb{R}^n$, $\phi: U \rightarrow \hat{U}$ be a homeomorphism.
   \begin{itemize}
     \item
-      The pair $(U, \phi)$ is called a \texit{coordinate chart} or a \textit{chart}.
+      The pair $(U, \phi)$ is called a \textit{coordinate chart} or a \textit{chart}.
     \item
       $U$ is called a \textit{coordinate domain} or a \textit{coordinate neighborhood} and $\phi$ is called a \textit{coordinate map}.
     \item
