Finish proving the smooth atlas part

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -133,10 +133,9 @@
       Let $(p \mapsto \phi(p) - x, \phi^{-1}(B(x, r))), (p \mapsto \phi(p) - x', \phi^{-1}(B(x', r'))) \in \mathcal{B}$ be given.
       Suppose $\phi^{-1}(B(x, r)) \cap \phi^{-1}(B(x', r')) \ne \emptyset$.
       Let $\psi, \psi'$ denote the coordinate maps.
-      \todo[inline,caption={}]{
-        Finish this!
-      }
+      Then $\psi' \circ \psi^{-1}$ is a composition of $\phi, \phi^{-1}$ and translation maps, so it is smooth.
   \end{itemize}
+  Therefore, $\mathcal{B}$ is a smooth atlas.
 
   Since $\mathcal{B}$ is a smooth atlas, there exists a smooth structure $\mathcal{A}$ on $M$ containing $\mathcal{B}$ by Proposition 1.17(a).
   We claim that $\mathcal{B}$, a subset of the smooth structure $\mathcal{A}$, is a countable basis of regular coordinate balls.
@@ -153,7 +152,7 @@
   \end{itemize}
 
   \todo[inline,caption={}]{
-    Finish this!
+    Work on the case when there is no chart that covers the entire manifold.
   }
 \end{proof}
 
