Sorta finish the first part of ex 1.20

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -149,6 +149,7 @@
       Let $B = \phi^{-1}(B(x, r)), B' = \phi^{-1}(B(x, r'))$.
       Let $\psi$ denote the map $p \mapsto \phi(p) - x$.
       Then $\psi(B) = B(0, r)$ and $\psi(B') = B(0, r')$, respectively.
+      Moreover, $\psi(\overline{B}) = \overline{B(0, r)}$ because $\psi$ is a homeomorphism.
   \end{itemize}
 
   \todo[inline,caption={}]{
