--- a/dictionary.tex
+++ b/dictionary.tex
@@ -64,3 +64,14 @@
 \begin{rem}
   One must define a smooth structure on a topological manifold before talking about a smooth chart.
 \end{rem}
+
+\begin{defn}[Smooth Maps]
+  Let $M, N$ be smooth manifolds and $F: M \rightarrow N$ be a map.
+  $F$ is a \textit{smooth map} if for every $p \in M$, there exist smooth charts $(U, \phi)$ containing $p$ and $(V, \psi)$ containing $F(p)$ such that
+  \begin{itemize}
+    \item
+      $F(U) \subset V$;
+    \item
+      $\psi \circ F \circ \phi^{-1}: \phi(U) \rightarrow \psi(V)$ is smooth.
+  \end{itemize}
+\end{defn}
