Start proving proposition 2.6

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -89,8 +89,24 @@
 \end{proof}
 
 \begin{customexer}{2.7(Proof of Proposition 2.6)}
-  $ $
-  \todo[inline,caption={}]{
-    Prove this!
-  }
+  Let $M$ and $N$ be smooth manifolds with or without boundary, and let $F: M \rightarrow N$ be a map.
+  \begin{enumerate}[label=(\alph*)]
+    \item 
+      If every point $p \in M$ has a neighborhood $U$ such that the restriction $F\mid_U$ is smooth, then $F$ is smooth.
+    \item
+      Conversely, if $F$ is smooth, then its restriction to every open subset is smooth.
+  \end{enumerate}
 \end{customexer}
+
+\begin{proof}
+  Let $\mathcal{A}_M, \mathcal{A}_N$ be smooth structures of $M, N$, respectively.
+  \begin{enumerate}[label=(\alph*)]
+    \item 
+      Let $p \in M$.
+      Let $U$ be a neighborhood of $p$ such that $F\mid_U$ is smooth.
+      \todo[inline,caption={}]{
+        This problem is a little more complicated than it seems because we need to show that $U$ is a smooth manifold in order to say $F\mid_U$ is smooth.
+        Exercise 1.44 is about that, so I should solve it first.
+      }
+  \end{enumerate}
+\end{proof}
